...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/name_text"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <EditText
                android:id="@+id/start_field"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/start_text"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <RadioGroup
                android:id="@+id/run_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/loop_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/run_type1" />

                <RadioButton
                    android:id="@+id/out_and_back_button"
...
                    android:layout_height="wrap_content"
                    android:text="@string/run_type2" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/flat_hilly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/flat_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/flat_hilly1" />

                <RadioButton
                    android:id="@+id/hilly_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/flat_hilly2" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/route_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/streets_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/route_type1" />

                <RadioButton
                    android:id="@+id/trail_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/route_type2" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/surface_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/even_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/surface_type1" />

                <RadioButton
                    android:id="@+id/uneven_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/surface_type2" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/easy_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/difficulity1" />

                <RadioButton
                    android:id="@+id/moderate_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulity2" />

                <RadioButton
                    android:id="@+id/hard_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulity3" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorite_button" />

            <MultiAutoCompleteTextView
                android:id="@+id/note_field"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:gravity="top|start"
                android:hint="@string/note_field"
                android:lines="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_buttton" />

            <Button
                android:id="@+id/save_buttton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
...
