...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height_prompt"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/user_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/confirm_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_prompt" />

</LinearLayout>
